add report field arguments